# smartolana

./: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  WalletConnectionProvider.tsx  index.tsx  main.tsx
app/src/utils/: connection.ts  createMintFromAnchor.ts  getTokenBalance.ts  mintTokens.ts  provider.ts
programs/smartolana/: Cargo.toml
programs/smartolana/src/: burning_tokens.rs  help.md  lib.rs  pda.rs  raw_counter.rs  raw_cpi.rs  raw_programs.rs
programs/smartolana/src/solos/: amm.rs  pdawvalidators.rs  raw_counter.rs  ripkeypair.rs  unstaking.rs  vote_on_proposal.rs
programs/validator_anchor_demo/: Cargo.toml
programs/validator_anchor_demo/src/: dao.rs  help.md  lib.rs  mint_nft.rs  pda.rs  pdawvalidators.rs  reassign_mint_authority.rs  ripkeypair.rs  staking.rs
tests/: pdawvalidator.ts  ripkeypairtest.ts  smartolana.ts  validator_anchor_demo.ts
